# Rumil

./: .gitignore  README.md  pyproject.toml
src/rumil/: __init__.py  __main__.py  _env.py  rumil.py
src/rumil/notes/: note.py
src/rumil/templates/: __init__.py  template.py
src/rumil/templates/alias/: alias.py
src/rumil/templates/configurations/: __init__.py  configurations.py
src/rumil/templates/configurations/git/: __init__.py  git.py  ignore.py
src/rumil/templates/export/: __init__.py  export.py  readme.py  zola.py
src/rumil/templates/medications/: __init__.py  medications.py
src/rumil/utils/: debug.py
