[project]
name = "rumil"
version = "0.1.0"
description = "Add your description here"
#readme = "README.md"
authors = [
    { name = "Patrick Armstrong", email = "patrick.james.1998@gmail.com" },
]
requires-python = ">=3.12"
dependencies = ["click>=8.3.1", "toml>=0.10.2"]

[build-system]
requires = ["uv_build>=0.9.13,<0.10.0"]
build-backend = "uv_build"
